<resources>
    <string name="app_name">BuySell</string>
    <string name="add_user">add user</string>
    <string name="login">login</string>
    <string name="email">email...</string>
    <string name="paasword">paasword...</string>
    <string name="sigin">sigin</string>
    <string name="signup">signup</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fe">FE</string>
    <string name="se">SE</string>
    <string name="te">TE</string>
    <string name="be">BE</string>
    <string name="year">Year</string>
    <string name="year1">Year:</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="buysell">Buysell</string>
    <string name="e_mail">E-Mail</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="title_activity_staggered">StaggeredActivity</string>
    <string name="title_activity_sell">SellActivity</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_descroipton">Product Descroipton</string>
    <string name="enter_contact_number">Enter contact number</string>
    <string name="enter_strong_password">Enter strong password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_signed_in">Already Signed In</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="enter_product_price">Enter product price</string>
    <string name="select_image">Select Image</string>
    <string name="upload_product">Upload Product</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="select_image_type">Select Image Type</string>
</resources>
