<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:id="@+id/cardview"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    android:layout_marginStart="8dp"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5.5">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"

            android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2"
        android:layout_weight="1.5"
        android:baselineAligned="false">

        <LinearLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1.3"
           android:padding="10dp"
           android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productName"
                android:text="@string/product_name"
                android:padding="2dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:maxLines="2" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:padding="2dp"
                android:text="@string/product_descroipton"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:layout_gravity="center"
                android:id="@+id/productPrice"
                android:textColor="#000"
                android:padding="2dp"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>



