<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88c5d5"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/email_login"
        android:layout_width="310dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/email_edit_text"
        android:drawableStart="@drawable/icon_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#080808"
        android:textColorHint="#a8d3e0"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        tools:layout_editor_absoluteY="215dp" />

    <EditText
        android:id="@+id/paasword"
        android:layout_width="310dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/email_edit_text"
        android:drawableStart="@drawable/icon_paasword"
        android:ems="10"
        android:hint="@string/paasword"
        android:inputType="textPassword"
        android:textColor="#080808"
        android:textColorHint="#a8d3e0"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        tools:layout_editor_absoluteY="305dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-326dp"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="1.0" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="119dp"
        android:layout_height="67dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/signin_button"
        android:text="@string/sigin"
        android:textColor="#080808"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        tools:layout_editor_absoluteY="426dp" />

    <Button
        android:id="@+id/add_user"
        android:layout_width="112dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/signin_button"
        android:text="@string/signup"
        android:textColor="#080808"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        tools:layout_editor_absoluteY="430dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.5" />
</android.support.constraint.ConstraintLayout>