<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    android:id="@+id/cl1"
    android:orientation="vertical"
    tools:context=".SignupActivity">

 <!--  <android.support.design.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingBottom="16dp"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="30dp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingBottom="16dp"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="30dp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="16dp"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="30dp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingBottom="16dp"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="90dp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_password_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingBottom="16dp"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="194dp" />

            <Button
                android:id="@+id/signup"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/signin_button"
                android:text="@string/signup"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>
    </android.support.design.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="23dp"
        android:layout_height="141dp"
        android:layout_gravity="center|bottom"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <android.support.design.card.MaterialCardView
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#ffffff"
        app:cardCornerRadius="10dp"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/name"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/enter_full_name"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="30dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/contactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/phone"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/enter_contact_number"
                    android:inputType="phone"
                    android:paddingBottom="16dp"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="30dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/email_edittext"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/enter_email_address"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="16dp"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="30dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/password_edittext"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/enter_strong_password"
                    android:inputType="textPassword"
                    android:paddingBottom="16dp"
                    android:textSize="20sp"

                    tools:layout_editor_absoluteX="30dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/password_edittext"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/confirm_your_password"
                    android:inputType="textPassword"
                    android:paddingBottom="16dp"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="30dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/signin_button"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/already_signed_in"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/signin_button"
                android:text="@string/already_signed_in"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>

    </android.support.design.card.MaterialCardView>
</android.support.constraint.ConstraintLayout>